# nemoclaw-workspace

./: .env.example  .gitignore  pyproject.toml
openclaw/: AGENTS.md.snippet
openclaw/skills/pii-redactor/: SKILL.md
src/clawguard/: __init__.py  cli.py  redactor.py  server.py
src/nemoclaw/: __init__.py  redactor.py  server.py
tests/: test_redactor.py  test_server.py
