[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawguard"
version = "0.1.0"
description = "Local PII redaction service for OpenClaw using nvidia/gliner-PII"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "gliner>=0.2.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
clawguard = "clawguard.cli:serve"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
